Corrected spacing.

--- a/baseframe/static/sass/select2.scss
+++ b/baseframe/static/sass/select2.scss
@@ -72,7 +72,7 @@ Version: 3.3.1 Timestamp: Wed Feb 20 09:57:22 PST 2013
 }
 
 .select2-container .select2-choice span {
-    margin-right: 26px;
+    margin-right: 34px;
     display: block;
     overflow: hidden;
 
